CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
PROJECT(amkv)

SET(CMAKE_CXX_STANDARD 23)
SET(CMAKE_CXX_FLAGS -fPIC)

## git
SET(GIT_COMMIT_ID "unknown_git_commit")
IF (CMAKE_BUILD_TYPE MATCHES "Rel")
    EXECUTE_PROCESS(
            COMMAND git rev-parse HEAD
            OUTPUT_VARIABLE GIT_COMMIT_ID
            OUTPUT_STRIP_TRAILING_WHITESPACE
    )
ENDIF ()
ADD_DEFINITIONS(-DGIT_COMMIT_ID="${GIT_COMMIT_ID}")

## ctest
OPTION(AMKV_BUILD_TEST "Build unit tests of AMKV" ON)
IF (AMKV_BUILD_TEST)
    ENABLE_TESTING()
ENDIF ()

ADD_SUBDIRECTORY(amkv)
ADD_SUBDIRECTORY(third-party)